--- a/conf.toml
+++ b/conf.toml
@@ -1,8 +1,8 @@
-"DbUser" = "postgres"
-"DbPassword" = "changeme"
+"DbUser" = "{{DbUser}}"
+"DbPassword" = "{{DbPassword}}"
 "DbName" = "app"
 "DbPort" = "5432"
-"DbHost" = "localhost"
+"DbHost" = "{{DbHost}}"
 "DbType" = "postgres"
 "ListenHost" = "0.0.0.0"
 "ListenPort" = "3000"
