--- a/templates/template-docker-push-to-acr.yml
+++ b/templates/template-docker-push-to-acr.yml
@@ -18,6 +18,20 @@
           enableRecursion: false
           useLegacyPattern: false
           enableTelemetry: true
+      - task: replacetokens@5
+        displayName: replace token on config
+        inputs:
+          targetFiles: '**/conf.toml'
+          encoding: 'auto'
+          tokenPattern: 'doublebraces'
+          writeBOM: true
+          actionOnMissing: 'warn'
+          keepToken: false
+          actionOnNoFiles: 'continue'
+          enableTransforms: false
+          enableRecursion: false
+          useLegacyPattern: false
+          enableTelemetry: true
       - task: Docker@2
         displayName: Build-push image to ACR
         inputs:
