--- a/CI-app-deploy.yml
+++ b/CI-app-deploy.yml
@@ -7,7 +7,7 @@ trigger:
     - ci-cd
   paths:
     exclude:
-    - */terraform/base/*
+    - terraform/base/*
 parameters:
   - name: Action
     displayName: Action
